--- a/index.html
+++ b/index.html
@@ -31,9 +31,52 @@
                     <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
+                <span class="btn navbar-text">
+                    <a data-toggle="modal" data-target="#loginModal">
+                        <span class="fa fa-sign-in"></span> Login
+                    </a>
+                </span>
             </div>
         </div>
     </nav>
+
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Login</h4>
+                    <button type="button" class="close" data-dismiss="modal">
+                        &times;
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group col-sm-4">
+                                    <label class="sr-only" for="exampleInputEmail3">Email address</label>
+                                    <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Enter email">
+                            </div>
+                            <div class="form-group col-sm-4">
+                                <label class="sr-only" for="exampleInputPassword3">Password</label>
+                                <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3" placeholder="Password">
+                            </div>
+                            <div class="col-sm-auto">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <label class="form-check-label"> Remember me
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>        
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <header class="jumbotron">
         <div class="container">
@@ -44,16 +87,16 @@
                 </div>
                 <div class="col-12 col-sm align-self-center align-center">
                     <div class="row">
-                    <div class="col-12, col-md-6 ">
-                        <img src="img/logo.png" class="image-fluid">
-                    </div>
-                    <div class="col-12 col-md-6 align-self-center mt-2">
-                    <a href="#Reserve">
-                        <button class="btn btn-block btn-warning">
-                             Reserve Table
-                        </button>
-                    </a>
-                    </div>
+                        <div class="col-12, col-md-6 ">
+                            <img src="img/logo.png" class="image-fluid">
+                        </div>
+                        <div class="col-12 col-md-6 align-self-center mt-2">
+                            <a role="button"  class="btn btn-block nav-link btn-warning"
+                            data-toggle="tooltip" data-html="ture"
+                            title="Or call us at Tel. 981234567" data-placement="bottom" href="#Reserve">
+                                Reserve Table
+                            </a>
+                        </div>
                     </div>
                     
                 </div>
@@ -215,6 +258,11 @@
         <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script>
+            $(document).ready(function(){
+                $('[data-toggle="tooltip"]').tooltip();
+            });
+        </script>            
 </body>
 
 </html>
