--- a/aboutus.html
+++ b/aboutus.html
@@ -198,11 +198,10 @@
                     </div>
                 </div>
             </div>
-
+            </div>
+            </div>
         </div>
-   
-
-
+        
        <div class="row row-content">
            <div class="col-12, col-md-9">
 <!--in above line tutorial had col-sm-9 instead of col-md-9 -->
