--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
 
     <div id="reservemodal" class="modal fade" role="dialog">
     <div class="modal-dialog model-lg" role="content">
-        <div class="row modal-content card" id="Reserve">
-            <h3 class="card-header bg-warning text-white">
-                Reserve a Table
-            </h2>
-            <div class="card-body">
+        <div class="row modal-content">
+            <div class="modal-header bg-warning">
+                <h3 class="text-white">
+                    Reserve a Table
+                </h2><button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
                 <form>
                     <div class="form-group row align-self-center">
                         <label for="guestnum" class="col-12 col-md-3">
@@ -196,7 +198,7 @@
                     </div>
 
                     <div class="carousel-item">
-                        <img class="d-block img-fluid" src="img/uthappizza.png" alt="Uthappizza">
+                        <img class="d-block img-fluid" src="img/buffet.png" alt="Buffet">
                         <div class="carousel-caption d-none d-sm-block">
                         <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span> </h2>
                         <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
@@ -204,7 +206,7 @@
                     </div>
 
                     <div class="carousel-item">
-                        <img class="d-block img-fluid" src="img/uthappizza.png" alt="Uthappizza">
+                        <img class="d-block img-fluid" src="img/alberto.png" alt="Alberto">
                         <div class="carousel-caption d-none d-sm-block">
                         <h2>Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
@@ -225,14 +227,9 @@
                 <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                     <span class="carousel-control-next-icon"></span>
                 </a>
-                <div class="btn-group" id="carouselButton">
-                <button class="btn btn-danger btn-sm" id="carousel-pause">
+                <button class="btn btn-danger btn-sm" id="carouselButton">
                     <span class="fa fa-pause"></span>
                 </button>
-                <button class="btn btn-danger btn-sm" id="carousel-play">
-                    <span class="fa fa-play"></span>
-                </button>    
-                </div>
             </div>
             </div>
         </div>
@@ -336,12 +333,18 @@
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
         <script>
             $(document).ready(function(){
-                $('#mycarousel').carousel({ interval: 2000 });
-                $('#carousel-pause').click(function(){
-                    $("#mycarousel").carousel('pause');
-                });
-                $('#carousel-play').click(function(){
-                    $('#mycarousel').carousel('cycle');
+                $('#mycarousel').carousel({ interval: 200 });
+                $('#carouselButton').click(function(){
+                    if ($('#carouselButton').children('span').hasClass('fa-pause')){
+                        $('#mycarousel').carousel('pause');
+                        $('#carouselButton').children('span').removeClass('fa-pause');
+                        $('#carouselButton').children('span').addClass('fa-play');
+                    }
+                    else if ($('#carouselButton').children('span').hasClass('fa-play')){
+                        $('#mycarousel').carousel('cycle');
+                        $('#carouselButton').children('span').removeClass('fa-play');
+                        $('#carouselButton').children('span').addClass('fa-pause');
+                    }
                 });
             });
         </script>
