--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                     <span class="carousel-control-next-icon"></span>
                 </a>
-                <button class="btn btn-danger btn-sm" id="carouselButton">
+                <button class="btn btn-link btn-sm" id="carouselButton">
                     <span class="fa fa-pause"></span>
                 </button>
             </div>
@@ -333,7 +333,7 @@
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
         <script>
             $(document).ready(function(){
-                $('#mycarousel').carousel({ interval: 200 });
+                $('#mycarousel').carousel({ interval: 2000 });
                 $('#carouselButton').click(function(){
                     if ($('#carouselButton').children('span').hasClass('fa-pause')){
                         $('#mycarousel').carousel('pause');
